--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1"
+    "@actions/github": "^5.1.1",
+    "typescript-logging": "^2.0.2",
+    "typescript-logging-log4ts-style": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.0",
