--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
+    "actions-toolkit": "^6.0.1",
     "typescript-logging": "^2.0.2",
     "typescript-logging-log4ts-style": "^2.0.2"
   },
